--- a/dash.html
+++ b/dash.html
@@ -290,7 +290,7 @@
                             <span style="color: rgba(128, 128, 128, 0.6);">DE 24 7105 .... .... .... 82</span> </span>
                         <v-spacer></v-spacer>
 
-                        <span style="color: #060538; font-size: .8rem; font-weight: bolder;">-34 950,00 €</span>
+                        <span style="color: #060538; font-size: .9rem; font-weight: bolder;">-34 950,00 €</span>
 
                     </div>
                     <br>
@@ -299,7 +299,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/s.jpeg" width="40" style="margin-right: 10px;">
-                        <span style="font-size: 0.8rem;">Spotify</span>
+                        <span style="font-size: 1rem; font-weight: bolder ;">Spotify</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-99,00 €</span>
@@ -317,7 +317,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/carrefour.png" width="40" style="margin-right: 10px;">
-                        <span style="font-size: 0.9rem;">Carrefour</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">Carrefour</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-100,00 €</span>
@@ -329,7 +329,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/SFR.svg" width="30" style="margin-right: 10px; margin-left: 8px;">
-                        <span style="font-size: 0.9rem;">SFR</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">SFR</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-50,00 €</span>
@@ -342,7 +342,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/amazon.webp" width="40" style="margin-right: 10px;">
-                        <span style="font-size: 0.9rem;">Amazon refund</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">Amazon refund</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey; color: green;">+ 300,00 €</span>
@@ -354,7 +354,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/lv.jpeg" width="40" style="margin-right: 10px;">
-                        <span style="font-size: 0.9rem;">Louis vuitton</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">Louis vuitton</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-150,00 €</span>
@@ -374,7 +374,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/m.jpeg" width="40" style="margin-right: 10px;">
-                        <span style="font-size: 0.9rem;">MacDo</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">MacDo</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-50,00 €</span>
@@ -386,7 +386,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/sncf.jpeg" width="40" style="margin-right: 10px;">
-                        <span style="font-size: 0.9rem;">SNCF</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">SNCF</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-23,00 €</span>
@@ -398,7 +398,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/edf.jpeg" width="40" style="margin-right: 10px;">
-                        <span style="font-size: 0.9rem;">EDF électricité</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">EDF électricité</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-211,00 €</span>
@@ -410,7 +410,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/n.jpeg" width="40" style="margin-right: 10px;">
-                        <span style="font-size: 0.9rem;">Netflix</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">Netflix</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-18,00 €</span>
@@ -422,7 +422,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/u.jpeg" width="40" style="margin-right: 10px;">
-                        <span style="font-size: 0.9rem;">Super U</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">Super U</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-1 300,00 €</span>
@@ -434,7 +434,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/c.jpeg" width="30" style="margin-right: 18px;">
-                        <span style="font-size: 0.9rem;">Cdiscount</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">Cdiscount</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey; ">-800,00 €</span>
@@ -446,7 +446,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/nike.jpeg" width="40" style="margin-right: 10px;">
-                        <span style="font-size: 0.9rem;">Nike</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">Nike</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-80,00 €</span>
@@ -458,7 +458,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/sg-icon.png" width="30" style="margin-right: 18px;">
-                        <span style="font-size: 0.9rem;">Société Générale</span>
+                        <span style="font-size:1rem; font-weight: bolder ;">Société Générale</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: green;">+ 2 700,00 €</span>
@@ -477,7 +477,7 @@
                                 <line x1="2" x2="22" y1="10" y2="10" />
                             </svg>
                         </v-avatar>
-                        <span style="font-size: 0.9rem;">Paiement</span>
+                        <span style="font-size: 0.9rem; font-weight: bolder ;">Paiement</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-150,00 €</span>
@@ -494,7 +494,7 @@
                                     d="M111.4 295.9c-3.5 19.2-17.4 108.7-21.5 134-.3 1.8-1 2.5-3 2.5H12.3c-7.6 0-13.1-6.6-12.1-13.9L58.8 46.6c1.5-9.6 10.1-16.9 20-16.9 152.3 0 165.1-3.7 204 11.4 60.1 23.3 65.6 79.5 44 140.3-21.5 62.6-72.5 89.5-140.1 90.3-43.4 .7-69.5-7-75.3 24.2zM357.1 152c-1.8-1.3-2.5-1.8-3 1.3-2 11.4-5.1 22.5-8.8 33.6-39.9 113.8-150.5 103.9-204.5 103.9-6.1 0-10.1 3.3-10.9 9.4-22.6 140.4-27.1 169.7-27.1 169.7-1 7.1 3.5 12.9 10.6 12.9h63.5c8.6 0 15.7-6.3 17.4-14.9 .7-5.4-1.1 6.1 14.4-91.3 4.6-22 14.3-19.7 29.3-19.7 71 0 126.4-28.8 142.9-112.3 6.5-34.8 4.6-71.4-23.8-92.6z" />
                             </svg>
                         </v-avatar>
-                        <span style="font-size: 0.9rem;">Paypal refund</span>
+                        <span style="font-size: 1rem; font-weight: bolder;">Paypal refund</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey; color: green;">+ 500,00 €</span>
@@ -506,7 +506,7 @@
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/carrefour.png" width="40" style="margin-right: 10px;">
-                        <span style="font-size: 0.9rem;">Carrefour</span>
+                        <span style="font-size: 1rem;font-weight: bolder;">Carrefour</span>
                         <v-spacer></v-spacer>
 
                         <span style="color: grey;">-800,00 €</span>
@@ -524,6 +524,7 @@
                         voir plus
                     </v-btn>
 
+                    <br><br>
 
 
                 </div>
@@ -832,7 +833,7 @@
                     this.formattedDate = `${day} ${month} ${year}`;
                 },
                 off() {
-                    window.location.href = './index.html'
+                    window.location.href = './loading2.html'
                 },
                 virement(event) {
                     event.preventDefault(); // Empêche le rechargement de la page
