--- a/loading2.html
+++ b/loading2.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.6.10/dist/vuetify.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <meta http-equiv="refresh" content="8; url=./dash.html">
+    <meta http-equiv="refresh" content="3; url=./index.html">
 </head>
 
 <style>
