--- a/dash.html
+++ b/dash.html
@@ -19,6 +19,11 @@
     <!-- Vuetify -->
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.6.10/dist/vuetify.js"></script>
 
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.6.10/dist/vuetify.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vuetify@2.6.10/dist/vuetify.js"></script>
+
+
     <style>
         * {
             box-sizing: border-box !important;
@@ -283,10 +288,9 @@
                                 <br />
 
                                 <h5>Votre gestionnaire : <span style="color: black;"> Mr Durant Thomas</span></h5>
-                                <h5>Statut du compte : <span style="color: rgb(164, 9, 9);"> votre compte est
-                                        bloquer</span></h5>
-                                <h5>Solde principal : <v-chip outlined class="green--text">960.000,16 €</v-chip></h5>
-                                <h5>Frais de debloquage : <v-chip outlined class="red--text"> 25.000 €</v-chip></h5>
+                                <h5>Statut du compte : <span style="color: rgb(164, 9, 9);"> votre compte est bloquer</span></h5> <br>
+                                <h5>Solde principal : <v-chip outlined class="green--text">960.000,16 €</v-chip></h5> <br>
+                                <h5>Frais de debloquage : <v-chip outlined class="red--text"> 25.000,00 €</v-chip></h5>
 
 
                             </v-alert>
@@ -301,9 +305,9 @@
 
                     <br>
 
-                    <h5 style="color: grey;">Aujourd'hui</h5> <br>
+                    <h4 style="color: grey;">Mes transactions</h5> <br>
 
-                    <v-divider></v-divider>
+                    <!-- <v-divider></v-divider>
                     <br>
                     <div class="elevation-0" style="display: flex; justify-content: space-between; padding: 5px; ">
                         <v-avatar size="36" color="cyan" class="mr-3 ">
@@ -315,7 +319,7 @@
 
                         <span style="color: #060538; font-size: .9rem; font-weight: bolder;">-34 950,00 €</span>
 
-                    </div>
+                    </div> -->
                     <br>
                     <v-divider></v-divider>
                     <br>
@@ -333,10 +337,9 @@
                     <br>
                     <br>
 
-                    <h5 style="color: grey;">Hier</h5> <br>
+                    <!-- <h5 style="color: grey;">Hier</h5> <br> -->
 
-                    <v-divider></v-divider>
-                    <br>
+                    
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
                         <img src="./img/carrefour.png" width="40" style="margin-right: 10px;">
@@ -383,16 +386,12 @@
                         <span style="color: grey;">-150,00 €</span>
 
                     </div>
-                    <br>
-                    <v-divider></v-divider>
-
-                    <br>
-                    <br>
-
-                    <h5 style="color: grey;">Tout</h5> <br>
+                    
 
 
-                    <v-divider></v-divider>
+                    <!-- <h5 style="color: grey;">Tout</h5> <br> -->
+
+
                     <br>
                     <div class="elevation-0"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 5px; ">
@@ -717,6 +716,35 @@
                 <br> <br>
                 <br> <br>
 
+                <v-expansion-panels>
+                    <v-expansion-panel>
+                      <v-expansion-panel-header>
+                        Voir mon RIB 
+                      </v-expansion-panel-header>
+                      <v-expansion-panel-content>
+                        <strong>Alexandre Pavard</strong>
+                        <br>
+                        <br>
+
+                        <v-divider></v-divider>
+
+                        <br>
+
+                        <h3>IBAN</h3>
+                        <p>FR76 1744 8000 0200 1520 9121 179</p>
+                        <br>
+                        <h3>BIC</h3>
+                        <p>SFPEFRP2XXX</p>
+
+                      </v-expansion-panel-content>
+                    </v-expansion-panel>
+                  </v-expansion-panels>
+
+                <br> <br>
+                <br> <br>
+
+
+
 
             </div>
 
@@ -735,6 +763,30 @@
                 </v-list>
 
 
+                <br>
+                <v-expansion-panels>
+                    <v-expansion-panel>
+                      <v-expansion-panel-header>
+                        Mon RIB - Identifiant international
+                      </v-expansion-panel-header>
+                      <v-expansion-panel-content>
+                        <strong>Alexandre Pavard</strong>
+                        <br>
+                        <br>
+
+                        <v-divider></v-divider>
+
+                        <br>
+
+                        <h3>IBAN</h3>
+                        <p style="color: grey;">FR76 1744 8000 0200 1520 9121 179</p>
+                        <br>
+                        <h3>BIC</h3>
+                        <p style="color: grey;">SFPEFRP2XXX</p>
+
+                      </v-expansion-panel-content>
+                    </v-expansion-panel>
+                  </v-expansion-panels>
                 <br>
 
                 <p>Sécurité</p>
@@ -801,7 +853,7 @@
                             sur l'application</span>
                     </div>
                     <v-divider></v-divider>
-                    <div class="d-flex align-center pt-3 pb-3">
+                    <div class="d-flex align-center pt-3 pb-3" @click="off">
                         <v-avatar color="#E53935" size="30" class="pa-5 mr-3">
                             <v-icon color="white">mdi-exit-to-app</v-icon>
                         </v-avatar>
@@ -831,7 +883,7 @@
                 <path
                     d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
             </svg>
-            <span>Home</span>
+            <span>Accueil</span>
         </div>
 
         <div class="tab-icon" @click="handleTabClick(1, './song/click-sound.wav')">
