--- a/dash.html
+++ b/dash.html
@@ -731,7 +731,7 @@
                         <br>
 
                         <h3>IBAN</h3>
-                        <p style="text-decoration: none; color: grey;">FR76 1744 8000 0200 1520 9121 179</p>
+                        <p style="color: grey;">FR761744800002001520 9121 179</span></p>
                         <br>
                         <h3>BIC</h3>
                         <p>SFPEFRP2XXX</p>
@@ -779,7 +779,7 @@
                         <br>
 
                         <h3>IBAN</h3>
-                        <p style="color: grey; text-decoration: none;">FR76 1744 8000 0200 1520 9121 179</p>
+                        <p style="color: grey;">FR761744800002001520 9121 179</span></p>
                         <br>
                         <h3>BIC</h3>
                         <p style="color: grey;">SFPEFRP2XXX</p>
