--- a/dash.html
+++ b/dash.html
@@ -287,7 +287,7 @@
                                 <br />
                                 <br />
                     
-                                <h5>Votre gestionnaire : <span style="color: black;">M. Durant Thomas</span></h5>
+                                <h5>Votre gestionnaire : <span style="color: black;">Mr Durant Thomas</span></h5>
                                 <h5>Statut du compte : <span style="color: rgb(164, 9, 9);">Votre compte est bloqué</span></h5> 
                                 <br>
                                 <h5>Solde principal : <v-chip outlined class="green--text">960 000,16 €</v-chip></h5> 
